samples/_failures_safe/1761301674_050c37_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9180ee80.c: In function ‘main’:
./samples/SAFE/__tmp_9180ee80.c:175:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  175 |     int token_count
      |     ^~~
./samples/SAFE/__tmp_9180ee80.c:175:5: error: expected declaration or statement at end of input
